# classifai

./: .gcloudignore  .gitignore  .nojekyll  .pre-commit-config-NO-DOCKER.yaml  .pre-commit-config.yaml  .terraform.lock.hcl  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.html  README.md  _quarto.yml  _renderer.py  app.cloudbuild.dev.yaml  app.cloudbuild.prod.yaml  app.cloudbuild.uat.yaml  app.fastapi.dev.yaml  app.fastapi.prod.yaml  app.fastapi.uat.yaml  app.flask.dev.yaml  app.flask.prod.yaml  app.flask.uat.yaml  app.yaml  cloudbuild.yaml  config.toml  custom_preprocessing_and_postprocessing_hooks.ipynb  dev_app.yaml  dev_cloudbuild.yaml  dev_flask_app.yaml  flask_app.yaml  index.html  index.qmd  main.py  main.tf  notes.txt  prod_app.yaml  prod_cloudbuild.yaml  prod_flask_app.yaml  (+13 more)
.github/: pull_request_template.md
.github/workflows/: ci.yml  conventional-commit.yml  publish_quarto_docs.yml  release.yml
DEMO/: .env.template  PoC_HF_RAG_Hook.ipynb  README.html  README.md  Using_Hooks.ipynb  ai_agent_hooks.html  ai_agent_hooks.ipynb  custom_preprocessing_and_postprocessing_hooks.html  custom_preprocessing_and_postprocessing_hooks.ipynb  custom_vectoriser.html  custom_vectoriser.ipynb  default_hooks_PoC.ipynb  demo_data.csv  demo_part2.py  evaluation_workflow_demo.html  evaluation_workflow_demo.ipynb  example_clientside.py  example_extended_serverside.py  genAI_prototype.ipynb  general_workflow_demo.html  general_workflow_demo.ipynb  general_workflow_serve.py  generative_ai_classifier.ipynb  indexing_demo.ipynb  oo_prototype_demo.ipynb  test_data.json  using_hooks.html  using_hooks.ipynb
DEMO/data/: fake_soc_dataset.csv  fake_soc_eval_queries.csv  fantasy_dataset.csv  testdata.csv  testdata.xlsx
DEMO/files/classifai_webinar/: classifai_core.ipynb  classifai_extra.ipynb  classifai_webinar.ipynb  demo_server_script.py  mock_coding_dataset.csv
DEMO_localLLM_POC/: COICOP_processed.csv  example_build_knowledgebase.py  example_extended_serverside.py  example_serverside.py  example_talk_to_API.py  example_talk_to_API_v2.py  isco.csv  isco_knowledgebase_localLLM.parquet  test_knowledgebase_localLLM.parquet
archive/: embedding.py  soc-example.py  soc_example2.py
data/: example_bus_desc.csv  example_industry_descr.csv  example_industry_descr_CLEAN.csv  example_survey_data.csv  example_survey_data_50.csv  lfs_mock.csv  soc_mock.json  synth_sample.json  synth_sample_labelled.json
docs/: evaluation.html  evaluation.main.Evaluation.html  evaluation.main.html  evaluation.metrics.Metric.html  evaluation.metrics.MetricResult.html  evaluation.metrics.html  index.html  indexers.VectorStore.embed.html  indexers.VectorStore.from_filespace.html  indexers.VectorStore.html  indexers.VectorStore.reverse_search.html  indexers.VectorStore.search.html  indexers.dataclasses.VectorStoreEmbedInput.html  indexers.dataclasses.VectorStoreEmbedOutput.html  indexers.dataclasses.VectorStoreReverseSearchInput.html  indexers.dataclasses.VectorStoreReverseSearchOutput.html  indexers.dataclasses.VectorStoreSearchInput.html  indexers.dataclasses.VectorStoreSearchOutput.html  indexers.dataclasses.html  indexers.hooks.default_hooks.html  indexers.hooks.default_hooks.postprocessing.DeduplicationHook.html  indexers.hooks.default_hooks.postprocessing.RagHook.html  indexers.hooks.default_hooks.postprocessing.html  indexers.hooks.default_hooks.preprocessing.CapitalisationStandardisingHook.html  indexers.hooks.default_hooks.preprocessing.html  indexers.hooks.hook_factory.HookBase.html  indexers.hooks.hook_factory.html  indexers.hooks.html  indexers.html  indexers.main.html  servers.get_router.html  servers.get_server.html  servers.html  servers.main.html  servers.make_endpoints.html  servers.run_server.html  vectorisers.base.VectoriserBase.html  vectorisers.base.VectoriserBase.transform.html  vectorisers.base.html  vectorisers.gcp.GcpVectoriser.html  (+3 more)
docs/governance/: roadmap.md
docs/governance/decisions/: README.md  app-engine.md  decision-template.md
docs/tutorials/: baseline_eval.qmd  setup_iap.md  soc_classifier.qmd  testing_rig.qmd  testing_rig_sic.qmd  testing_rig_sic_survey.qmd  ui_app.qmd
fast-api/: main.py  main_api.py
fast_api/: __init__.py  embedder.py  main.py  pydantic_models.py
flask_ui/: __init__.py  api.py  app.py  example_sic_20.csv  job_data.csv  lib.py
flask_ui/db/: __init__.py  blueprint.py  lib.py  models.py  queries.py
flask_ui/static/: actions.js  app.js  dataService.js  main.js  mock_sic_response.json  mock_soc_response.json  state.js  styles.css  uiService.js
flask_ui/templates/: _index.html  base.html  index.html
notebooks/: soc-example.py  soc_embedding_example.py  soc_example2.py
scripts/: classifai.py  create_fixed_width_file.py  llmedit.py  make_parquet_embedding.py  new_vdb_to_local.py  run_eval.py  submit_for_coding.py  submit_for_soc_coding.py
site_libs/bootstrap/: bootstrap-24111f2d7671a07c32a60419c31bd4a3.min.css  bootstrap-c3871cc889d5876972026f066232dbbc.min.css
src/: __init__.py
src/classifAI/: __init__.py  embedding.py
src/classifAI_API/: __init__.py
src/classifAI_API/fast_api/: __init__.py  embedder.py  main.py  pydantic_models.py
src/classifAI_API/indexers/: __init__.py  main.py
src/classifAI_API/servers/: main.py  pydantic_models.py
src/classifAI_API/utils/: __init__.py  knowledgebase_factory.py
src/classifai/: __init__.py  _optional.py  api.py  config.py  doc_utils.py  embedding.py  evaluation.py  exceptions.py  gcp_data_getters.py  generate_labelled_synth_data.py  generate_synth_data.py  llm.py  prompt.py  search_result_builders.py  sic_index.py  sic_knowledge_bases.py  soc_index.py  testing_rig_functions.py  utils.py
src/classifai_package/: _optional.py
terraform/: README.md
testbed/: server_hooks_slowapi_ratelimiter_poc.py
tests/: conftest.py  test_api.py  test_doc_utils.py  test_embedding.py  test_fast_api_embedder.py  test_search_result_builders.py  test_soc_index.py  test_testing_rig_functions.py
tests/data/: lfs_test.csv
tests/flask_app/: test_db_queries.py  test_db_views.py
(+56 files in other folders)
